--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,8 @@
 spring:
   profiles:
-    include: oauth
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/springaws
-    username: sa
-    password:
+    include: oauth,real-db
   session:
     store-type: jdbc
-    jdbc:
-      initialize-schema: always
   jpa:
     show-sql: true
     hibernate:
