--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,24 @@ notifications:
   email:
     recipients:
       - "shiroed1211@naver.com"
+
+before_deploy:
+  - zip -r spring-aws *
+  - mkdir -p deploy
+  - mv spring-aws.zip deploy/spring-aws.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: spring-aws-build
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
+notifications:
+  email:
+    recipients:
+      - "shiroed1211@naver.com"
