add travis and codedeploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,17 @@ deploy:
     acl: private
     local_dir: deploy
     wait-until-deployed: true
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: spring-aws-build
+    key: spring-aws.zip
+    bundle_type: zip
+    application: spring-aws
+    deployment_group: spring-aws-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 
 notifications:
   email:
