--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,13 @@ notifications:
       - "shiroed1211@naver.com"
 
 before_deploy:
-  - zip -r spring-aws *
-  - mkdir -p deploy
-  - mv spring-aws.zip deploy/spring-aws.zip
+  - mkdir -p befor-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp builds/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/spring-aws.zip
 
 deploy:
   - provider: s3
@@ -46,9 +50,3 @@ deploy:
     wait-until-deployed: true
     on:
       all_branches: true
-
-
-notifications:
-  email:
-    recipients:
-      - "shiroed1211@naver.com"
