--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ notifications:
       - "shiroed1211@naver.com"
 
 before_deploy:
-  - mkdir -p befor-deploy
+  - mkdir -p before-deploy
   - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
   - cp builds/libs/*.jar before-deploy/
