--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/kim/app/step2/zip/
+    destination: /home/kim/app/step3/zip/
     overwrite: yes
 
 permissions:
@@ -12,7 +12,15 @@ permissions:
     group: kim
 
 hooks:
+  AfterInstall:
+    - location: stop.sh
+      timeout: 60
+      runas: kim
   ApplicationStart:
     - location: deploy.sh
+      timeout: 60
+      runas: kim
+  ValidateService:
+    - locaiton: health.sh
       timeout: 60
       runas: kim
